...
        <scene sceneID="yvq-7n-cSh">
            <objects>
                <tableViewController storyboardIdentifier="Important Numbers" id="g8Y-kr-0ue" customClass="ImportantNumbersViewController" sceneMemberID="viewController">
                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="CHT-4s-fcp">
                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
...
                                        <subviews>
                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="748" translatesAutoresizingMaskIntoConstraints="NO" id="5T8
                                                <accessibility key="accessibilityConfiguration" identifier="name"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                            </label>
                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X55-zO-KoE">
                                                <accessibility key="accessibilityConfiguration" identifier="type"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                <nil key="highlightedColor"/>
...
                                                            </label>
                                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G4I-hB-Noc">
                                                                <accessibility key="accessibilityConfiguration" identifier="phone"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <nil key="highlightedColor"/>
...
                                                            </label>
                                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yHe-5f-0Ra">
                                                                <accessibility key="accessibilityConfiguration" identifier="email"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <nil key="highlightedColor"/>
...
                                                            </label>
                                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="685
                                                                <accessibility key="accessibilityConfiguration" identifier="address"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <nil key="highlightedColor"/>
...
                                                                </constraints>
                                                            </imageView>
                                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Get Directions" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoC
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <nil key="highlightedColor"/>
...
