...
                buttonImage = UIImage(named: "home-menu-icon")
            }

            buttonImage?.isAccessibilityElement = false

            let button = UIBarButtonItem(image: buttonImage, style: UIBarButtonItemStyle.plain, target: controller, action:#selector(UIViewController.revealMenu(_:)))
            button.accessibilityLabel = NSLocalizedString("Menu", comment: "Accessibility menu label")
            controller.navigationItem.leftBarButtonItem = button
        }
    }
}

